# example_chatgpt_django

./: README.md  manage.py  pyproject.toml
example_chatgpt_django/: asgi.py  settings.py  urls.py  wsgi.py
example_chatgpt_django/chat/: routing.py  urls.py  views.py
static/: chat.css
templates/: base.html  chat.html  index.html
templates/chat/: final_system_message_demo.html  system_message.html  user_message_demo.html
